Correct FastAPI Dockerfile and main.py to use PORT env var

--- a/Dockerfile.fastapi
+++ b/Dockerfile.fastapi
@@ -9,6 +9,11 @@ COPY main.py .
 COPY data_preprocessor.py .
 COPY model_deployment_assets/ ./model_deployment_assets/
 
-EXPOSE 8000
+# code for local deployment
+#EXPOSE 8000
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+#CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+
+# for cloud deployment
+EXPOSE 8080
+CMD ["python", "main.py"
